# notate

./: .gitignore  AGENTS.md  CONTEXT.md  DECISIONS.md  README.md  build.gradle.kts  findings_20260716_100135.md  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml  test.yml
app/: build.gradle.kts  proguard-rules.pro
app/OpenCV/jni/include/opencv2/: opencv_modules.hpp
app/schemas/com.alexdremov.notate.ocr.index.OcrIndexDatabase/: 2.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/ocr/: MODEL_MANIFEST.json
app/src/main/cpp/: CMakeLists.txt  native.cpp
app/src/main/java/com/alexdremov/notate/: AppNotateNavigator.kt  CanvasActivity.kt  MainActivity.kt  NotateApplication.kt  NotePickerActivity.kt
app/src/main/java/com/alexdremov/notate/data/: CanvasRepository.kt  CanvasSerializer.kt  FileIndexManager.kt  GoogleDriveProvider.kt  PathRelations.kt  PreferencesManager.kt  ProjectRepository.kt  SerializationModels.kt  StorageProvider.kt  SyncManager.kt  WebDavProvider.kt
app/src/main/java/com/alexdremov/notate/data/region/: RegionManager.kt  RegionStorage.kt
app/src/main/java/com/alexdremov/notate/data/worker/: OcrBackfillWorker.kt  OcrIndexWorker.kt  SaveWorker.kt
app/src/main/java/com/alexdremov/notate/model/: CanvasImage.kt  InfiniteCanvasModel.kt  InputAction.kt  LinkItem.kt
app/src/main/java/com/alexdremov/notate/ocr/: OcrAssetManager.kt  OcrConversionPlanner.kt  OcrModels.kt  OcrTextSource.kt  PaddleLiteOcrEngine.kt
app/src/main/java/com/alexdremov/notate/ocr/index/: OcrIndexDao.kt  OcrIndexDatabase.kt  OcrIndexWriter.kt  OcrNavigation.kt  OcrSearchNormalizer.kt  OcrSearchRepository.kt  OcrTiledRecognizer.kt
app/src/main/java/com/alexdremov/notate/ui/: OnyxCanvasView.kt  SettingsSidebarController.kt  SidebarCoordinator.kt
app/src/main/java/com/alexdremov/notate/ui/controller/: CanvasController.kt  CanvasControllerImpl.kt  SelectionManager.kt
app/src/main/java/com/alexdremov/notate/ui/dialog/: CanvasContextMenu.kt  InsertLinkDialog.kt  SelectionActionPopup.kt
app/src/main/java/com/alexdremov/notate/ui/home/: FileBrowserScreen.kt  SettingsDialog.kt  Sidebar.kt
app/src/main/java/com/alexdremov/notate/ui/input/: EraserGestureHandler.kt  PenInputHandler.kt
app/src/main/java/com/alexdremov/notate/ui/interaction/: ViewportInteractor.kt
app/src/main/java/com/alexdremov/notate/ui/navigation/: PageNavigation.kt
app/src/main/java/com/alexdremov/notate/ui/render/: CanvasLayout.kt  CanvasRenderer.kt  MinimapDrawer.kt
app/src/main/java/com/alexdremov/notate/util/: LinkRenderer.kt  Logger.kt  TileCache.kt  TileManager.kt  ZipUtils.kt
app/src/main/java/com/alexdremov/notate/vm/: DrawingViewModel.kt  HomeViewModel.kt
app/src/main/res/drawable/: bg_popup_outlined.xml  bg_sidebar_foreground.xml  bg_tool_selected.xml  ic_image.xml  ic_resize_handle.xml
app/src/main/res/layout/: activity_main.xml  dialog_background_settings.xml  dialog_canvas_context_menu.xml  dialog_insert_link.xml  dialog_pen_settings.xml  dialog_progress.xml  dialog_selection_actions.xml  sidebar_debug_menu.xml  sidebar_export_menu.xml  sidebar_layout_wrapper.xml  sidebar_main_menu.xml  sidebar_pattern_generator.xml  sidebar_writing_menu.xml  view_floating_window.xml
app/src/main/res/values/: dimens.xml
app/src/test/java/com/alexdremov/notate/data/: AtomicContainerStorageTest.kt  CanvasRepositoryOriginTest.kt  CanvasRepositoryWorkTest.kt  CanvasSerializerRefactorTest.kt  StorageUtilsTest.kt  SyncManagerTest.kt
app/src/test/java/com/alexdremov/notate/ocr/: OcrGeometryTest.kt  OcrIndexWriterTest.kt  OcrSearchNormalizerTest.kt
core/app-contracts/: build.gradle.kts
core/document/: build.gradle.kts
core/rendering/: build.gradle.kts
docs/: architecture.md  hwr-wrapper-api.md  on-device-ppocrv3.md
docs/adr/: 0001-notebook-owned-handwriting-recognition.md  0002-incompatible-notebook-format-v4.md
feature/canvas/: build.gradle.kts
feature/canvas/src/main/java/com/alexdremov/notate/: CanvasActivity.kt
feature/canvas/src/main/res/drawable/: bg_close_button.xml  bg_tool_active.xml  ic_add.xml  ic_content_paste.xml  ic_crop_square.xml  ic_redo.xml  ic_text.xml  ic_tool_select.xml  ic_undo.xml  ink_eraser_24.xml  stylus_ballpoint_24.xml  stylus_brush_24.xml  stylus_dash_24.xml  stylus_fineliner_24.xml  stylus_fountain_pen_24.xml  stylus_highlighter_24.xml  stylus_pen_24.xml
feature/canvas/src/main/res/layout/: activity_main.xml  dialog_pen_settings.xml  dialog_selection_actions.xml  item_color_circle.xml  sidebar_debug_menu.xml  sidebar_export_menu.xml  sidebar_layout_wrapper.xml  sidebar_main_menu.xml  view_floating_window.xml
feature/canvas/src/main/res/values/: dimens.xml  strings.xml
feature/home/: build.gradle.kts
feature/home/src/main/java/com/alexdremov/notate/: MainActivity.kt  NotePickerActivity.kt
feature/home/src/main/res/drawable/: ic_notebook_widget.xml
feature/home/src/main/res/layout/: widget_notate.xml  widget_notebook_row.xml
feature/home/src/main/res/values/: widget_strings.xml
feature/home/src/main/res/xml/: notate_widget_info.xml
feature/pdf/: build.gradle.kts
feature/sync/: build.gradle.kts
feature/text-recognition/: build.gradle.kts
ocr-runtime/: build.gradle.kts  consumer-rules.pro
ocr-runtime/src/main/assets/ocr/: MODEL_MANIFEST.json
ocr-runtime/src/main/cpp/: CMakeLists.txt  common.h  native.cpp  native.h  ocr_db_post_process.cpp  ocr_ppredictor.cpp  ocr_ppredictor.h  preprocess.cpp
ocr-runtime/src/main/java/com/alexdremov/notate/ocr/: OCRPredictorNative.java  OcrAssetManager.kt  OcrModelPackManager.kt  OcrModels.kt  OcrResultModel.java  PaddleLiteOcrEngine.kt
ocr-runtime/src/test/java/com/alexdremov/notate/ocr/: OcrModelPackInstallerTest.kt
reviews_triage/: pr-1-feedback-20260716-151314.json  pr-3-feedback-20260716-151321.json  pr-7-feedback-20260716-104705.json
(+198 files in other folders)
